[project]
name = "port-guardian"
version = "0.3.5"
description = "Serverless IP whitelist manager for EC2 management ports across multi-account, multi-region AWS environments."
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.62",
    "chalice>=1.32.0",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
]
